<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_name">What\'s Poppin\'?</string>
    <string name="title_activity_maps">What\'s Poppin\'?</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required for this app to work properly.</string>
    <string name="location_permission_denied">This app requires location permission to enable the features for your area. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="app_homepage">http://whatspop.in</string>
    <string name="nav_bar_title_secondary">Helpful</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_report">Report a Problem</string>
    <string name="nav_bar_locations_list">Locations List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Is this place poppin\' notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit_text_feedback_default">Describe your issue or share your idea</string>
    <string name="submit">Submit</string>
    <string name="nav_bar_about">About</string>
    <string name="about_header_text">About the App</string>
    <string name="about_developers_text">From Paranoid Developers, Inc. ©, et al.</string>
    <string name="about_version_name_default">0.0.0</string>
    <string name="about_version_code_default">00000</string>
    <string name="edit_text_location_desc_hint">Description (optional)</string>
    <string name="edit_text_location_name_hint">Name of the Location</string>
    <string name="image_data_info">(Image is never sent outside of your device.)</string>
    <string name="map_screenshot_desc">A screenshot of the location to store.</string>
</resources>
