<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_bar_home"/>
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_bar_locations_list"/>
    </group>

    <item android:title="@string/nav_bar_title_secondary">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_bar_settings"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_error"
                android:title="@string/nav_bar_report"/>
        </menu>
    </item>

</menu>
