<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_text_location_name_hint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edit_text_location_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_text_location_desc_hint"
        android:inputType="textCapSentences"/>

    <ImageView
        android:id="@+id/map_screenshot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/map_screenshot_desc"/>

</LinearLayout>
